# Django-Ai-Agent

./: .gitignore  README.md  pyproject.toml
frontend/: index.html
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: ChatPage.tsx  DocumentPanel.tsx  LoginForm.tsx
notebook/: 1-hello.ipynb  10-roles-and-permissions.ipynb  2-django-user-perms.ipynb  3-langgraphd-django-tools-basics.ipynb  4-verfily-llmdjango.ipynb  5-helloworld-ai-agent.ipynb  6-agent-crud.ipynb  7-aapi-client-tests.ipynb  8-movie-discovery-agent.ipynb  9-mulit-supervisor.ipynb
src/: .env.example  manage.py
src/ai/: agents.py  llms.py  supervisors.py
src/ai/tools/: documents.py  movie_discovery.py
src/api/: agent_service.py  serializers.py  urls.py  views.py
src/cfehome/: asgi.py  settings.py  urls.py  utf8_bootstrap.py  wsgi.py
src/documents/: models.py
src/documents/migrations/: 0001_initial.py  0002_alter_document_active_at.py  0003_alter_document_content.py
src/mypermit/: client.py
src/tmdb/: client.py
