[project]
name = "django-ai-agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "django==5.2",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.17.1",
    "jupyter>=1.1.1",
    "langchain-openai>=1.3.0",
    "langgraph>=1.2.4",
    "permit>=2.8.3",
    "python-decouple>=3.8",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
